add, test and doc get series by apiId action #7
